@@ -13,6 +13,7 @@ AC_PROG_LIBTOOL
 # Checks for pkg-config packages
 PKG_CHECK_MODULES(XXF86DGA, xproto x11 xextproto xext xf86dgaproto)
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile
