@@ -1,3 +1,10 @@
+2005-10-11  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* man/Makefile.am:
+	* configure.ac:
+	Use sed to put version number in man page
+	Add shadow man pages for man pages that document multiple functions.
+
 2005-07-08  Keith Packard  <keithp@keithp.com>
 
 	* .cvsignore:
